# swagger-operator

./: .dockerignore  Dockerfile  LICENSE  README.md  controller.py  index.yaml  pyproject.toml  pytest.ini  server.py  swagger-operator-0.1.0.tgz  swagger-operator-0.2.1-chart.tgz  swagger-operator-0.2.1.tgz  swagger-operator-0.3.0.tgz  swagger-operator-0.3.1.tgz
.github/: FUNDING.yml  GitVersion.yaml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yaml  cicd.yaml  tests.yaml  version.yaml
charts/swagger-operator/: Chart.yaml  values.yaml
charts/swagger-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  role.yaml  service.yaml  serviceaccount.yaml  sso-secret.yaml
charts/swagger-operator/templates/tests/: test-connection.yaml
templates/: config.html  redoc.html  swagger.html
tests/: test_controller.py  test_server.py
