[tool.poetry]
name = "swagger-operator"
version = "0.1.0"
description = ""
authors = ["Luiz Oliveira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
kopf = "^1.37.5"
asyncio = "^3.4.3"
fastapi = {extras = ["standard"], version = "^0.115.12"}
authlib = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
