[tool.poetry]
name = "swagger-operator"
version = "0.2.0"
description = ""
authors = ["Luiz Oliveira", "Gustavo Coelho"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
kopf = "^1.37.5"
asyncio = "^3.4.3"
fastapi = {extras = ["standard"], version = "^0.115.12"}
authlib = "^1.5.2"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"
bandit = "^1.8.3"
ruff = "^0.11.10"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
